<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_roms"
        android:icon="@drawable/ic_roms"
        android:title="@string/roms"
        app:cnb_iconColor="@color/purple_200" />
    <item
        android:id="@+id/action_mods"
        android:icon="@drawable/ic_mods"
        android:title="@string/mods"
        app:cnb_iconColor="@color/purple_200" />
    <item
        android:id="@+id/action_kernels"
        android:icon="@drawable/ic_kernels"
        android:title="@string/kernels"
        app:cnb_iconColor="@color/purple_200" />

    <item
        android:id="@+id/action_additionally"
        android:icon="@drawable/ic_additionally"
        android:title="@string/additionally"
        app:cnb_iconColor="@color/purple_200"/>
</menu>